Sun Aug 24 01:25:35 1997  Mikael Djurfeldt  <mdj@kenneth>

	* ramap.c (scm_ra_matchp, scm_array_fill_int, racp, ramap_1,
 	ramap_2o, scm_array_index_map_x, raeql_1, scm_array_equal_p),
 	unif.c (scm_vector_set_length_x, scm_uniform_vector_length,
 	scm_array_p, scm_array_rank, scm_array_dimensions,
 	scm_enclose_array, scm_array_in_bounds_p, scm_uniform_vector_ref,
	scm_cvref, scm_array_set_x, scm_array_contents, scm_array_to_list,
 	scm_array_prototype): Added case scm_tc7_wvect.

Sat Aug 23 18:45:44 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* errno.h: prototype for scm_strerror.
	* error.c (scm_strerror): new procedure.

Mon Aug 18 14:58:22 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* list.c (scm_list_append_x): Allow non-pair as last argument.
	This is consistent with the R4RS append and is probably the
	correct behaviour as specified by R2RS.  (Thanks to Radey Shouman)

Sat Aug 16 18:42:15 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* stime.h: prototype for scm_times.
	* stime.c (scm_times): new procedure.
	* ioext.c (scm_fseek): if the first argument is a file descriptor
	call lseek.
	(scm_ftell): if the first argument is a file descriptor call lseek
	(sic).
	* filesys.h: prototypes for scm_open_fdes, scm_fsync.
	* filesys.c (scm_chmod): if the first argument is a file descriptor,
	call fchmod.
	(scm_chown): if the first argument is a port or file descriptor,
	call fchown.
	(scm_truncate_file): new procedure.
	Add DEFER/ALLOW INTS to a few other procedures.
	(scm_fsync): new procedure.
	(scm_open_fdes): new procedure.
	(scm_open): use scm_open_fdes.  If mode isn't specified, 666 will
	now be used.
	(scm_fcntl): the first argument can now be a file descriptor.  The
	third argument is now optional.	

	* posix.c (scm_execl, scm_execlp): make the filename argument
	compulsory, since omitting it causes SEGV.
	(scm_sync): return unspecified instead of #f.
	(scm_execle): new procedure.
	(environ_list_to_c): new procedure.